# capstone

./: README.md  blockchain.md  grant_perms.sql
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/core/: config.yaml
ehr-blockchain/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
ehr-blockchain/backend/: Cargo.toml
ehr-blockchain/backend/migrations/: 001_initial.sql
ehr-blockchain/backend/src/: config.rs  main.rs
ehr-blockchain/backend/src/handlers/: appointment_handler.rs  assignment_handler.rs  audit_handler.rs  auth_handler.rs  erasure_handler.rs  export_handler.rs  incident_handler.rs  mod.rs  order_handler.rs  patient_handler.rs  permission_handler.rs  problem_handler.rs  record_handler.rs  user_handler.rs  verify_handler.rs
ehr-blockchain/backend/src/middleware/: jwt.rs  rbac.rs
ehr-blockchain/backend/src/models/: medical_record.rs  mod.rs  patient.rs  patient_service.rs
ehr-blockchain/backend/src/services/: audit_service.rs  auth_service.rs  blockchain_service.rs  encryption.rs  export_service.rs  hash_service.rs  incident_service.rs  mod.rs  pagination.rs  patient_service.rs  rate_limit.rs  record_service.rs  totp_service.rs
ehr-blockchain/docs/: README.md  api.md  architecture.md  compliance.md  data-flows.md  index.md  security-model.md  smart-contracts.md  sprint.yaml  stellar-admin-rotation.md
ehr-blockchain/frontend/: index.css  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
ehr-blockchain/migrations/: 001_create_users.sql  002_create_patients.sql  003_create_medical_records.sql  (+24 more)
(+46 files in other folders)
