[package]
name = "ehr-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
bcrypt = "0.15"
jsonwebtoken = "9"
futures = "0.3"
hex = "0.4"
sha2 = "0.10"
aes-gcm = "0.10"
generic-array = "0.14"
rand = "0.8"
actix-cors = "0.7"
totp-rs = "5"
base32 = "0.5"
